# rle_workshop

./: .gitignore  OLD_presentation.qmd  README.md  _quarto.yml  index.qmd  presentation-1-setup.html  presentation.qmd  pyproject.toml  styles.css
.github/workflows/: deploy.yml
images/: OLD_rle_tools_overview.excalidraw
maps/: ecosystem_eoo.html  ecosystems_aoo_grid.html  ruritania_T1.1.1.html  ruritania_T1.1.1_eoo.html  ruritania_T6.5.1.html  ruritania_T6.5.1_eoo.html  ruritania_aoo_grid.html  ruritania_ecosystem.html  ruritania_ecosystems.html
