[project]
authors = [{name = "Tyler Erickson", email = "tyler@vorgeo.com"}]
dependencies = []
name = "rle_workshop"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
rle_workshop = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
quarto = ">=1.8.27,<2"
jupyter = ">=1.1.1,<2"
